// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Snapshots No Children 1`] = `
<ul
  className="sc-AykKD jpnaqQ"
>
  <li
    className="sc-AykKC cGuGtE"
  />
</ul>
`;

exports[`Alert Snapshots No props 1`] = `
<ul
  className="sc-AykKD jpnaqQ"
>
  <li
    className="sc-AykKC cGuGtE"
  >
    One ListElement
  </li>
  <li
    className="sc-AykKC cGuGtE"
  >
    Another List Element
  </li>
</ul>
`;
